--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Button Testing</title>
+  </head>
+  <body>
+    <button onclick="window.location.href='https://www.linkedin.com/in/amoore05/';">
+      Click Here
+    </button>
+  </body>
+</html>
