--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <button class="button button1" onclick="window.location.href='https://www.linkedin.com/in/amoore05/';">
-      LinkedIn
+      <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn" style="width:42px;height:42px;border:0;">
     </button>
   </body>
 </html>
