--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
     <head>
         <style>
             .button {
-            border: none;
-            color: white;
-            padding: 16px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            transition-duration: 0.4s;
-            cursor: pointer;
+                border: none;
+                color: white;
+                padding: 16px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                transition-duration: 0.4s;
+                cursor: pointer;
             }
-
+            
             .button1 {
+            background-image: url("https://www.linkedin.com/favicon.ico");
             background-color: white;
             color: black;
             border: 2px solid #4CAF50;
@@ -47,7 +48,7 @@
   </head>
   <body>
     <button class="button button1" onclick="window.location.href='https://www.linkedin.com/in/amoore05/';">
-      <img src="https://www.linkedin.com/favicon.ico" alt="LinkedIn" style="width:42px;height:42px;border:0;"/>
+        
     </button>
   </body>
 </html>
