Haven't committed in a bit, lotsa stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>My Website</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="icon" href="./images/220926_Sat.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap" rel="stylesheet">
@@ -21,6 +22,7 @@
             <a href="https://github.com/moore-andrew05" class="app-icon-button git"></a>
             <a href="./pages/planets.html" class="app-icon-button astronomy"></a>
             <a href="./pages/wii.html" class="app-icon-button wii"></a>
+            <a href="https://fortnitetracker.com/profile/all/Batt0598" class="app-icon-button fortnite"></a>
 
         </div>
         
