--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <title>My Website</title>
+        <title>Andrew's Website</title>
         <link rel="stylesheet" href="./css/style.css">
         <link rel="icon" href="./images/220926_Sat.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,9 +20,6 @@
             <br>
             <a href="https://www.linkedin.com/in/amoore05/" class="app-icon-button linkedin"></a>
             <a href="https://github.com/moore-andrew05" class="app-icon-button git"></a>
-            <a href="./pages/planets.html" class="app-icon-button astronomy"></a>
-            <a href="./pages/wii.html" class="app-icon-button wii"></a>
-            <a href="https://fortnitetracker.com/profile/all/Batt0598" class="app-icon-button fortnite"></a>
 
         </div>
         
